--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rest-countries-api",
   "version": "0.1.0",
-  "homepage": "https://gitname.github.io/react-gh-pages",
+  "homepage": "https://devmunro.github.io/REACT-Project--World-API/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
